# tom-and-jerry

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  TODO.md  config.toml
.github/workflows/: website.yml
Carrom Chase/with_friction/: carrom_board_game_with_friction.cpp
Carrom Chase/without_friction_2/: carrom_board_game_without_friction.cpp
cpp-variant/: README.md
cpp-variant/src/: main.cpp  utils.cpp
src/: main.cpp  main.rs  temp.cpp  vector2d.cpp
src/prototype_with_friction/: carrom_board_prototype.cpp
src/with_friction/: main.cpp
src/without_friction/: main.cpp
templates/: index.html
